# vmtk

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING.txt  Copyright.txt  LICENCE  LICENSE  MANIFEST.in  README  README.md  SuperBuild.cmake  TODO.txt  __init__.py  __init__.py.in  appveyor.yml  build.sh  interactivepype.py  meta.yaml  pyproject.toml  setup.py  vmtk.py  vmtk_env.sh.in  vmtk_startup.bat.in  vmtkenv.py  vmtkinteractive.py
PypeS/: CMakeLists.txt  LICENCE  __init__.py  pype.py  pypebatch.py  pypemain.py  pypepad.py  pyperun.py  pypes.py  pypescript.py  pypeserver.py  pypesutils.py  pypetest.py  pypetestrunner.py  pypewrapper.py
distribution/: CMakeLists.txt  bld.bat  build.sh  conda_build_config.yaml  meta.yaml
distribution/anaconda/: build.sh  meta.yaml
distribution/appveyor/: after_test.sh  install.ps1  install.sh  rm_rf.py  run_with_env.cmd
distribution/bundle/: Info.plist.in  vmtk-startup
distribution/egg/: PKG-INFO  README  setup.py  setup.py.in  vmtk_post_install.py
distribution/homebrew/: vmtk.rb  vmtk.rb.in
distribution/legacy/: CMakeLists.txt
distribution/nsis/: vmtk-icon.tiff
distribution/pypi/: README.md  package_init.py  test_wheel.py
distribution/scripts/: getbuildvmtk.py
distribution/travis/: install.sh
tests/: CMakeLists.txt  conftest.py  test_pypes.py  test_vmtkScripts.py
tests/testData/: CMakeLists.txt  aorta-fastmarching-initial-levelset.mha  aorta-final-levelset.mha  aorta-surface.stl  aorta-surface.vtp  aorta.mha
tests/test_PypeS/: CMakeLists.txt  test_pype.py  test_pypes.py
tests/test_vmtkScripts/: CMakeLists.txt  conftest.py  test_importvmtkscripts.py  test_importvtkvmtk.py  test_pypescripts.py  test_vmtkScripts.py  test_vmtkarraythreshold.py  test_vmtkbifurcationprofiles.py  test_vmtkbifurcationreferencesystems.py  test_vmtkbifurcationsections.py  test_vmtkbifurcationvectors.py  test_vmtkbranchclipper.py  test_vmtkbranchextractor.py  test_vmtkbranchgeometry.py  test_vmtkbranchmetrics.py  test_vmtkbranchsections.py  test_vmtkcenterlineattributes.py  test_vmtkcenterlinegeometry.py  test_vmtkcenterlineimage.py  test_vmtkcenterlineinterpolation.py  test_vmtkcenterlinemodeller.py  test_vmtkcenterlineoffsetattributes.py  test_vmtkcenterlineresampling.py  test_vmtkcenterlines.py  test_vmtkcenterlinesmoothing.py  test_vmtkcenterlinesnetwork.py  test_vmtkentityextractor.py  test_vmtkentitylist.py  test_vmtkimagebinarize.py  test_vmtkimagecast.py  test_vmtkimagecompare.py  test_vmtkimagecompose.py  test_vmtkimagefeatures.py  test_vmtkimageinitialization.py  test_vmtkimagemorphology.py  test_vmtkimagenormalize.py  test_vmtkimageobjectenhancement.py  test_vmtkimageotsuthresholds.py  test_vmtkimagereader.py  test_vmtkimagereslice.py  (+34 more)
tests/utilities/: hashdata.py  renamedata.py
vmtkScripts/: CMakeLists.txt  __init__.py  vmtkactivetubes.py  vmtkbifurcationprofiles.py  vmtkbifurcationreferencesystems.py  vmtkbifurcationsections.py  vmtkbifurcationvectors.py  vmtkboundarylayer.py  vmtkboundaryreferencesystems.py  vmtkbranchclipper.py  vmtkbranchextractor.py  vmtkbranchgeometry.py  vmtkbranchmapping.py  vmtkbranchmetrics.py  vmtkbranchpatching.py  vmtkbranchsections.py  vmtkcenterlineattributes.py  vmtkcenterlinegeometry.py  vmtkcenterlineimage.py  vmtkcenterlineinterpolation.py  vmtkcenterlinelabeler.py  vmtkcenterlinemerge.py  vmtkcenterlinemeshsections.py  vmtkcenterlinemodeller.py  vmtkcenterlineoffsetattributes.py  vmtkcenterlineresampling.py  vmtkcenterlines.py  vmtkcenterlinesections.py  vmtkcenterlinesmoothing.py  vmtkcenterlinesnetwork.py  vmtkcenterlineviewer.py  vmtkdelaunayvoronoi.py  vmtkdistancetocenterlines.py  vmtkendpointextractor.py  vmtkflowextensions.py  vmtkicpregistration.py  vmtkimagebinarize.py  vmtkimagecast.py  vmtkimagecompare.py  vmtkimagecompose.py  (+123 more)
vmtkScripts/contrib/: CMakeLists.txt  __init__.py  vmtkarraythreshold.py  vmtkboundarylayer2.py  vmtkcenterlinestonumpy.py  vmtkcontribscripts.py  vmtkdijkstradistancetopoints.py  vmtkdistancetospheres.py  vmtkendpointsections.py  vmtkentityextractor.py  vmtkentitylist.py  vmtkentityrenumber.py  vmtkgeodesicsurfaceresolution.py  vmtkimagepainter.py  vmtkimagetonumpy.py  vmtkmeshaddexternallayer.py  vmtkmeshappend.py  vmtkmeshcapper.py  vmtkmeshclipcenterlines.py  vmtkmeshconnector.py  vmtkmeshconnectorfsi.py  vmtkmeshcoords.py  vmtkmeshimplicitdistance.py  vmtkmeshinfo.py  vmtkmeshinternalfacescleaner.py  vmtkmeshmerge.py  vmtkmeshringgenerator.py  vmtkmeshtethex.py  vmtkmeshtetrahedralize2.py  vmtkmeshtonumpy.py  vmtkmeshviewer2.py  vmtkmeshwarpbyvector.py  vmtkmeshwriter2.py  vmtknumpyreader.py  vmtknumpytocenterlines.py  vmtknumpytoimage.py  vmtknumpytomesh.py  vmtknumpytosurface.py  vmtknumpywriter.py  vmtkpetergeneratesurface.py  (+26 more)
vmtkScripts/resources/: CMakeLists.txt  vmtkimagevolumeviewerpresets.xml
vtkVmtk/: CMakeLists.txt  CMakeOptions.cmake  LICENCE  VTKCopyright.txt  vmtkFunctions.cmake  vtkMacroKitPythonWrap.cmake  vtkvmtk.py  vtkvmtkConfigure.h.in
vtkVmtk/Common/: CMakeLists.txt  vtkvmtkCocoaGLView.h  vtkvmtkCocoaGLView.mm  vtkvmtkCocoaRenderWindowInteractor.h  vtkvmtkCocoaRenderWindowInteractor.mm  vtkvmtkCocoaServer.h  vtkvmtkCocoaServer.mm  vtkvmtkConstants.h  vtkvmtkMath.cxx  vtkvmtkMath.h  vtkvmtkWin32Header.h
vtkVmtk/ComputationalGeometry/: CMakeLists.txt  vtkvmtkAppendFilter.cxx  vtkvmtkAppendFilter.h  vtkvmtkBoundaryReferenceSystems.cxx  vtkvmtkBoundaryReferenceSystems.h  vtkvmtkCapPolyData.cxx  vtkvmtkCapPolyData.h  vtkvmtkCenterlineAttributesFilter.cxx  vtkvmtkCenterlineAttributesFilter.h  vtkvmtkCenterlineBifurcationReferenceSystems.cxx  vtkvmtkCenterlineBifurcationReferenceSystems.h  vtkvmtkCenterlineBifurcationVectors.cxx  vtkvmtkCenterlineBifurcationVectors.h  vtkvmtkCenterlineBranchExtractor.cxx  vtkvmtkCenterlineBranchExtractor.h  vtkvmtkCenterlineBranchGeometry.cxx  vtkvmtkCenterlineBranchGeometry.h  vtkvmtkCenterlineEndpointExtractor.cxx  vtkvmtkCenterlineEndpointExtractor.h  vtkvmtkCenterlineGeometry.cxx  vtkvmtkCenterlineGeometry.h  vtkvmtkCenterlineReferenceSystemAttributesOffset.cxx  (+81 more)
(+844 files in other folders)
